next release
------------
-augustus: revemped augustus options a little to make it more general use
-bsml2fasta: fixed Seq-data parsing bug (previously wouldn't extract anything)
-bsml2legacydb.pl: now pads exon ids to 6 digits
-genscan2bsml.pl: no longer attempts to create exonless predictions where they exist in genscan output.
-fgenesh2bsml.pl: now uses Chado::Gene modeling.  fgenesh.i1.xml updated accordingly.
-glimmerHMM2bsml.pl: no longer off by one on right side coords.
-reset_subgroups.pl: marks subgroups not marked complete as incomplete given an iterator workflow xml file
-augustus2bsml.pl: now automatically detects executable version and parses correctly
-auto_annotate: removed from Makefile.PL.  replaced by predict_prokaryotic_gene_function.  will eventually be deprecated completely.
-new component: predict_prokaryotic_gene_function
-Prokaryotic_Annotation_Pipeline: moved tmhmm and lipoprotein_motif earlier in the pipeline so they can be used in functional prediction step
-CHANGELOG: now in reverse chronological order

ergatis-v2r7b1
--------------
-geneidgff2bsml.pl: now correctly converts to interbase
-pipeline list page for a project now shows project code
-changed all /usr/local/bin/perl paths to /usr/bin/perl in cgi-bin
-bugfix: tmhmm component wasn't actually passing OTHER_OPTS variable
-bugfix: tmhmm2bsml was failing when html anchors in output were commented out by tmhmm
-bugfix: ps_scan component how handles multi-fasta input files correctly
-changed glimmer3 to read executable paths from software.config
-translate_sequence: removed hard-coded paths, eliminated sh wrapper
-fixed sf.net bug 1843655: save_component.cgi was failing on values containing + symbol
-standardized the perl path to /usr/bin/perl in ergatis/src/perl (though they're mostly run by wrappers anyway)
-brought default project.config inline with ergatis.ini default values
-made PROJECT_CODE optional, can now omit value